[package]
name = "algo_graph"
version = "0.1.0"
edition = "2021"
authors = ["vismate <visnyarmate@gmail.com>"]

[lib]
name = "algo_graph"
path = "src/lib.rs"

[[bin]]
name = "algo_graph_demo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "~1.3"
dot = "0.1.4"
infinitable = "~1.3"